--- a/package/batocera/emulationstation/batocera-es-system/locales/fr/batocera-es-system.po
+++ b/package/batocera/emulationstation/batocera-es-system/locales/fr/batocera-es-system.po
@@ -654,7 +654,7 @@ msgctxt "game_options"
 msgid "YUV v3 (Firebrand)"
 msgstr ""
 
-#. TRANSLATION: libretro/mesen, dolphin, dolphin_triforce, duckstation, mupen64plus
+#. TRANSLATION: libretro/mesen, citra, dolphin, dolphin_triforce, duckstation, ...
 msgctxt "game_options"
 msgid "LOAD CUSTOM TEXTURES"
 msgstr ""
@@ -4854,7 +4854,7 @@ msgctxt "game_options"
 msgid "160fps"
 msgstr ""
 
-#. TRANSLATION: libretro/tyrquake, cemu, dolphin, duckstation, supermodel
+#. TRANSLATION: libretro/tyrquake, cemu, dolphin, dolphin_triforce, duckstation, ...
 msgctxt "game_options"
 msgid "RUMBLE"
 msgstr ""
@@ -5654,11 +5654,6 @@ msgstr ""
 
 #. TRANSLATION: citra
 msgctxt "game_options"
-msgid "CUSTOM TEXTURES"
-msgstr ""
-
-#. TRANSLATION: citra
-msgctxt "game_options"
 msgid "Preloading is impossible from ES."
 msgstr ""
 
@@ -5798,12 +5793,12 @@ msgctxt "game_options"
 msgid "1x native (640x528)"
 msgstr ""
 
-#. TRANSLATION: dolphin, dolphin_triforce
+#. TRANSLATION: dolphin
 msgctxt "game_options"
 msgid "6x 4K (3840x3168)"
 msgstr ""
 
-#. TRANSLATION: dolphin, dolphin_triforce
+#. TRANSLATION: dolphin
 msgctxt "game_options"
 msgid "8x 5K (5120x4224)"
 msgstr ""
@@ -5833,44 +5828,44 @@ msgctxt "game_options"
 msgid "UBERSHADERS"
 msgstr ""
 
-#. TRANSLATION: dolphin, dolphin_triforce
+#. TRANSLATION: dolphin
 msgctxt "game_options"
 msgid ""
 "May not work well on all hardware. Hybrid is preferred, where supported."
 msgstr ""
 
-#. TRANSLATION: dolphin, dolphin_triforce
+#. TRANSLATION: dolphin
 msgctxt "game_options"
 msgid "No Ubershaders"
 msgstr ""
 
-#. TRANSLATION: dolphin, dolphin_triforce
+#. TRANSLATION: dolphin
 msgctxt "game_options"
 msgid "Exclusive Ubershaders"
 msgstr ""
 
-#. TRANSLATION: dolphin, dolphin_triforce
+#. TRANSLATION: dolphin
 msgctxt "game_options"
 msgid "Hybrid Ubershaders"
 msgstr ""
 
-#. TRANSLATION: dolphin, dolphin_triforce
+#. TRANSLATION: dolphin
 msgctxt "game_options"
 msgid "Skip Drawing"
 msgstr ""
 
-#. TRANSLATION: dolphin, dolphin_triforce
+#. TRANSLATION: dolphin
 msgctxt "game_options"
 msgid "PRE-CACHE SHADERS"
 msgstr ""
 
-#. TRANSLATION: dolphin, dolphin_triforce
+#. TRANSLATION: dolphin
 msgctxt "game_options"
 msgid ""
 "Compile shaders on next launch of game (one time). Reduces micro-freezes."
 msgstr ""
 
-#. TRANSLATION: dolphin, dolphin_triforce
+#. TRANSLATION: dolphin
 msgctxt "game_options"
 msgid "Off (default)"
 msgstr ""
@@ -5900,7 +5895,7 @@ msgctxt "game_options"
 msgid "Improves clarity of distant textures."
 msgstr ""
 
-#. TRANSLATION: dolphin
+#. TRANSLATION: dolphin, dolphin_triforce
 msgctxt "game_options"
 msgid "DUAL CORE MODE"
 msgstr ""
@@ -5910,7 +5905,7 @@ msgctxt "game_options"
 msgid "Usually not much faster than single core mode."
 msgstr ""
 
-#. TRANSLATION: dolphin
+#. TRANSLATION: dolphin, dolphin_triforce
 msgctxt "game_options"
 msgid "GPU SYNC"
 msgstr ""
@@ -5925,22 +5920,22 @@ msgctxt "game_options"
 msgid "ANTI-ALIASING"
 msgstr ""
 
-#. TRANSLATION: dolphin, dolphin_triforce
+#. TRANSLATION: dolphin
 msgctxt "game_options"
 msgid "ANTI-ALIASING MODE"
 msgstr ""
 
-#. TRANSLATION: dolphin, dolphin_triforce
+#. TRANSLATION: dolphin
 msgctxt "game_options"
 msgid "Toggle MSAA/SSAA. Depends on anti-aliasing being enabled."
 msgstr ""
 
-#. TRANSLATION: dolphin, dolphin_triforce
+#. TRANSLATION: dolphin
 msgctxt "game_options"
 msgid "MSAA (default)"
 msgstr ""
 
-#. TRANSLATION: dolphin, dolphin_triforce
+#. TRANSLATION: dolphin
 msgctxt "game_options"
 msgid "SSAA"
 msgstr ""
@@ -5997,7 +5992,12 @@ msgstr ""
 
 #. TRANSLATION: dolphin_triforce
 msgctxt "game_options"
-msgid "UBERSHADERS (needs review)"
+msgid "1.5x 720p (960x792)"
+msgstr ""
+
+#. TRANSLATION: dolphin_triforce
+msgctxt "game_options"
+msgid "2.5x 1080p (1600x1320)"
 msgstr ""
 
 #. TRANSLATION: dolphin_triforce
@@ -6007,17 +6007,27 @@ msgstr ""
 
 #. TRANSLATION: dolphin_triforce
 msgctxt "game_options"
-msgid "DUAL CORE MODE (needs review)"
+msgid "8x (CSAA)"
 msgstr ""
 
 #. TRANSLATION: dolphin_triforce
 msgctxt "game_options"
-msgid "GPU SYNC (needs review)"
+msgid "8xQ (CSAA)"
 msgstr ""
 
 #. TRANSLATION: dolphin_triforce
 msgctxt "game_options"
-msgid "RUMBLE (needs review)"
+msgid "16x (CSAA)"
+msgstr ""
+
+#. TRANSLATION: dolphin_triforce
+msgctxt "game_options"
+msgid "16xQ (CSAA)"
+msgstr ""
+
+#. TRANSLATION: dolphin_triforce
+msgctxt "game_options"
+msgid "4x (SSAA)"
 msgstr ""
 
 #. TRANSLATION: duckstation
