--- a/package/batocera/emulationstation/batocera-es-system/locales/nl/batocera-es-system.po
+++ b/package/batocera/emulationstation/batocera-es-system/locales/nl/batocera-es-system.po
@@ -668,7 +668,7 @@ msgctxt "game_options"
 msgid "YUV v3 (Firebrand)"
 msgstr ""
 
-#. TRANSLATION: libretro/mesen, dolphin, dolphin_triforce, duckstation, mupen64plus
+#. TRANSLATION: libretro/mesen, citra, dolphin, dolphin_triforce, duckstation, ...
 msgctxt "game_options"
 msgid "LOAD CUSTOM TEXTURES"
 msgstr "LAAD AANGEPASTE TEXTURES"
@@ -4887,7 +4887,7 @@ msgctxt "game_options"
 msgid "160fps"
 msgstr "160fps"
 
-#. TRANSLATION: libretro/tyrquake, cemu, dolphin, duckstation, supermodel
+#. TRANSLATION: libretro/tyrquake, cemu, dolphin, dolphin_triforce, duckstation, ...
 msgctxt "game_options"
 msgid "RUMBLE"
 msgstr "RUMBLE"
@@ -5692,11 +5692,6 @@ msgstr "Verminder stotteren wanneer shaderes gecompileerd worden."
 
 #. TRANSLATION: citra
 msgctxt "game_options"
-msgid "CUSTOM TEXTURES"
-msgstr "AANGEPASTE TEXTURES"
-
-#. TRANSLATION: citra
-msgctxt "game_options"
 msgid "Preloading is impossible from ES."
 msgstr "Voorladen is onmogelijk vanuit ES."
 
@@ -5840,12 +5835,12 @@ msgctxt "game_options"
 msgid "1x native (640x528)"
 msgstr "1x native (640x528)"
 
-#. TRANSLATION: dolphin, dolphin_triforce
+#. TRANSLATION: dolphin
 msgctxt "game_options"
 msgid "6x 4K (3840x3168)"
 msgstr "6x 4K (3840x3168)"
 
-#. TRANSLATION: dolphin, dolphin_triforce
+#. TRANSLATION: dolphin
 msgctxt "game_options"
 msgid "8x 5K (5120x4224)"
 msgstr "8x 5K (5120x4224)"
@@ -5877,39 +5872,39 @@ msgctxt "game_options"
 msgid "UBERSHADERS"
 msgstr "UBERSHADERS"
 
-#. TRANSLATION: dolphin, dolphin_triforce
+#. TRANSLATION: dolphin
 msgctxt "game_options"
 msgid ""
 "May not work well on all hardware. Hybrid is preferred, where supported."
 msgstr ""
 "Werkt niet goed op alle hardware. Hybride is geprefereerd, waar ondersteund."
 
-#. TRANSLATION: dolphin, dolphin_triforce
+#. TRANSLATION: dolphin
 msgctxt "game_options"
 msgid "No Ubershaders"
 msgstr "Geen Ubershaders"
 
-#. TRANSLATION: dolphin, dolphin_triforce
+#. TRANSLATION: dolphin
 msgctxt "game_options"
 msgid "Exclusive Ubershaders"
 msgstr "Exclusieve Ubershaders"
 
-#. TRANSLATION: dolphin, dolphin_triforce
+#. TRANSLATION: dolphin
 msgctxt "game_options"
 msgid "Hybrid Ubershaders"
 msgstr "Hybride Ubershaders"
 
-#. TRANSLATION: dolphin, dolphin_triforce
+#. TRANSLATION: dolphin
 msgctxt "game_options"
 msgid "Skip Drawing"
 msgstr "Skip Drawing"
 
-#. TRANSLATION: dolphin, dolphin_triforce
+#. TRANSLATION: dolphin
 msgctxt "game_options"
 msgid "PRE-CACHE SHADERS"
 msgstr "PRE-CACHE SHADERS"
 
-#. TRANSLATION: dolphin, dolphin_triforce
+#. TRANSLATION: dolphin
 msgctxt "game_options"
 msgid ""
 "Compile shaders on next launch of game (one time). Reduces micro-freezes."
@@ -5917,7 +5912,7 @@ msgstr ""
 "Compileer shaders op volgende start van spel (eenmaal). Verminderd micro-"
 "freezes."
 
-#. TRANSLATION: dolphin, dolphin_triforce
+#. TRANSLATION: dolphin
 msgctxt "game_options"
 msgid "Off (default)"
 msgstr "Uit (standaard)"
@@ -5947,7 +5942,7 @@ msgctxt "game_options"
 msgid "Improves clarity of distant textures."
 msgstr "Verbeterd helderheid van verre textures."
 
-#. TRANSLATION: dolphin
+#. TRANSLATION: dolphin, dolphin_triforce
 msgctxt "game_options"
 msgid "DUAL CORE MODE"
 msgstr "DUAL CORE MODUS"
@@ -5957,7 +5952,7 @@ msgctxt "game_options"
 msgid "Usually not much faster than single core mode."
 msgstr "Gewoonlijk niet veel sneller dan single core modus."
 
-#. TRANSLATION: dolphin
+#. TRANSLATION: dolphin, dolphin_triforce
 msgctxt "game_options"
 msgid "GPU SYNC"
 msgstr "GPU SYNC"
@@ -5972,22 +5967,22 @@ msgctxt "game_options"
 msgid "ANTI-ALIASING"
 msgstr "ANTI-ALIASING"
 
-#. TRANSLATION: dolphin, dolphin_triforce
+#. TRANSLATION: dolphin
 msgctxt "game_options"
 msgid "ANTI-ALIASING MODE"
 msgstr "ANTI-ALIASING MODUS"
 
-#. TRANSLATION: dolphin, dolphin_triforce
+#. TRANSLATION: dolphin
 msgctxt "game_options"
 msgid "Toggle MSAA/SSAA. Depends on anti-aliasing being enabled."
 msgstr "Schakel MSAA/SSAA. Hangt af of anti-aliasing ingeschakeld is."
 
-#. TRANSLATION: dolphin, dolphin_triforce
+#. TRANSLATION: dolphin
 msgctxt "game_options"
 msgid "MSAA (default)"
 msgstr "MSAA (standaard)"
 
-#. TRANSLATION: dolphin, dolphin_triforce
+#. TRANSLATION: dolphin
 msgctxt "game_options"
 msgid "SSAA"
 msgstr "SSAA"
@@ -6044,7 +6039,12 @@ msgstr "Emuleer de Wiimote pointer met een muis."
 
 #. TRANSLATION: dolphin_triforce
 msgctxt "game_options"
-msgid "UBERSHADERS (needs review)"
+msgid "1.5x 720p (960x792)"
+msgstr ""
+
+#. TRANSLATION: dolphin_triforce
+msgctxt "game_options"
+msgid "2.5x 1080p (1600x1320)"
 msgstr ""
 
 #. TRANSLATION: dolphin_triforce
@@ -6054,17 +6054,27 @@ msgstr ""
 
 #. TRANSLATION: dolphin_triforce
 msgctxt "game_options"
-msgid "DUAL CORE MODE (needs review)"
+msgid "8x (CSAA)"
 msgstr ""
 
 #. TRANSLATION: dolphin_triforce
 msgctxt "game_options"
-msgid "GPU SYNC (needs review)"
+msgid "8xQ (CSAA)"
 msgstr ""
 
 #. TRANSLATION: dolphin_triforce
 msgctxt "game_options"
-msgid "RUMBLE (needs review)"
+msgid "16x (CSAA)"
+msgstr ""
+
+#. TRANSLATION: dolphin_triforce
+msgctxt "game_options"
+msgid "16xQ (CSAA)"
+msgstr ""
+
+#. TRANSLATION: dolphin_triforce
+msgctxt "game_options"
+msgid "4x (SSAA)"
 msgstr ""
 
 #. TRANSLATION: duckstation
@@ -7928,6 +7938,10 @@ msgid ""
 "Read mouse through Rawinput, allowing 2 mice for 2 player shooting games."
 msgstr ""
 "Less muis door Rawinput, laat 2 muizen toe voor 2 speler schiet spellen."
+
+#~ msgctxt "game_options"
+#~ msgid "CUSTOM TEXTURES"
+#~ msgstr "AANGEPASTE TEXTURES"
 
 #~ msgctxt "game_options"
 #~ msgid "Game"
