--- a/package/batocera/emulationstation/batocera-es-system/locales/pl/batocera-es-system.po
+++ b/package/batocera/emulationstation/batocera-es-system/locales/pl/batocera-es-system.po
@@ -674,7 +674,7 @@ msgctxt "game_options"
 msgid "YUV v3 (Firebrand)"
 msgstr ""
 
-#. TRANSLATION: libretro/mesen, dolphin, dolphin_triforce, duckstation, mupen64plus
+#. TRANSLATION: libretro/mesen, citra, dolphin, dolphin_triforce, duckstation, ...
 msgctxt "game_options"
 msgid "LOAD CUSTOM TEXTURES"
 msgstr "ZAŁADUJ NIESTANDARDOWE TEKSTURY"
@@ -4904,7 +4904,7 @@ msgctxt "game_options"
 msgid "160fps"
 msgstr ""
 
-#. TRANSLATION: libretro/tyrquake, cemu, dolphin, duckstation, supermodel
+#. TRANSLATION: libretro/tyrquake, cemu, dolphin, dolphin_triforce, duckstation, ...
 msgctxt "game_options"
 msgid "RUMBLE"
 msgstr "WIBRACJE"
@@ -5710,11 +5710,6 @@ msgstr "Redukuje zacinanie się programu podczas kompilacji shaderów."
 
 #. TRANSLATION: citra
 msgctxt "game_options"
-msgid "CUSTOM TEXTURES"
-msgstr "NIESTANDARDOWE TEKSTURY"
-
-#. TRANSLATION: citra
-msgctxt "game_options"
 msgid "Preloading is impossible from ES."
 msgstr "Wstępne ładowanie jest niemożliwe z ES."
 
@@ -5857,12 +5852,12 @@ msgctxt "game_options"
 msgid "1x native (640x528)"
 msgstr "1x natywna (640x528)"
 
-#. TRANSLATION: dolphin, dolphin_triforce
+#. TRANSLATION: dolphin
 msgctxt "game_options"
 msgid "6x 4K (3840x3168)"
 msgstr "6x 4K (3840x3168)"
 
-#. TRANSLATION: dolphin, dolphin_triforce
+#. TRANSLATION: dolphin
 msgctxt "game_options"
 msgid "8x 5K (5120x4224)"
 msgstr "8x 5K (5120x4224)"
@@ -5893,7 +5888,7 @@ msgctxt "game_options"
 msgid "UBERSHADERS"
 msgstr "UBERSHADERS"
 
-#. TRANSLATION: dolphin, dolphin_triforce
+#. TRANSLATION: dolphin
 msgctxt "game_options"
 msgid ""
 "May not work well on all hardware. Hybrid is preferred, where supported."
@@ -5901,32 +5896,32 @@ msgstr ""
 "Może nie działać dobrze na każdym sprzęcie. Preferowany jest tryb hybrydowy, "
 "tam gdzie jest obsługiwany."
 
-#. TRANSLATION: dolphin, dolphin_triforce
+#. TRANSLATION: dolphin
 msgctxt "game_options"
 msgid "No Ubershaders"
 msgstr "Bez Ubershaders"
 
-#. TRANSLATION: dolphin, dolphin_triforce
+#. TRANSLATION: dolphin
 msgctxt "game_options"
 msgid "Exclusive Ubershaders"
 msgstr "Ekskluzywne Ubershaders"
 
-#. TRANSLATION: dolphin, dolphin_triforce
+#. TRANSLATION: dolphin
 msgctxt "game_options"
 msgid "Hybrid Ubershaders"
 msgstr "Hybrydowe Ubershaders"
 
-#. TRANSLATION: dolphin, dolphin_triforce
+#. TRANSLATION: dolphin
 msgctxt "game_options"
 msgid "Skip Drawing"
 msgstr "Pomiń rysowanie"
 
-#. TRANSLATION: dolphin, dolphin_triforce
+#. TRANSLATION: dolphin
 msgctxt "game_options"
 msgid "PRE-CACHE SHADERS"
 msgstr "WSTĘPNE BUFOROWANIE SHADERÓW"
 
-#. TRANSLATION: dolphin, dolphin_triforce
+#. TRANSLATION: dolphin
 msgctxt "game_options"
 msgid ""
 "Compile shaders on next launch of game (one time). Reduces micro-freezes."
@@ -5934,7 +5929,7 @@ msgstr ""
 "Kompilacja shaderów przy następnym uruchomieniu gry (jednorazowo). Redukuje "
 "mikrozawieszania."
 
-#. TRANSLATION: dolphin, dolphin_triforce
+#. TRANSLATION: dolphin
 msgctxt "game_options"
 msgid "Off (default)"
 msgstr "Wyłączone (domyślnie)"
@@ -5964,7 +5959,7 @@ msgctxt "game_options"
 msgid "Improves clarity of distant textures."
 msgstr "Poprawia wyrazistość odległych tekstur."
 
-#. TRANSLATION: dolphin
+#. TRANSLATION: dolphin, dolphin_triforce
 msgctxt "game_options"
 msgid "DUAL CORE MODE"
 msgstr "TRYB DWURDZENIOWY"
@@ -5974,7 +5969,7 @@ msgctxt "game_options"
 msgid "Usually not much faster than single core mode."
 msgstr "Zwykle niewiele szybszy niż tryb jednordzeniowy."
 
-#. TRANSLATION: dolphin
+#. TRANSLATION: dolphin, dolphin_triforce
 msgctxt "game_options"
 msgid "GPU SYNC"
 msgstr "GPU SYNC"
@@ -5989,22 +5984,22 @@ msgctxt "game_options"
 msgid "ANTI-ALIASING"
 msgstr "WYGŁADZANIE"
 
-#. TRANSLATION: dolphin, dolphin_triforce
+#. TRANSLATION: dolphin
 msgctxt "game_options"
 msgid "ANTI-ALIASING MODE"
 msgstr "TRYB WYGŁADZANIA"
 
-#. TRANSLATION: dolphin, dolphin_triforce
+#. TRANSLATION: dolphin
 msgctxt "game_options"
 msgid "Toggle MSAA/SSAA. Depends on anti-aliasing being enabled."
 msgstr "Przełącz MSAA/SSAA. Zależy od włączonego wygładzania."
 
-#. TRANSLATION: dolphin, dolphin_triforce
+#. TRANSLATION: dolphin
 msgctxt "game_options"
 msgid "MSAA (default)"
 msgstr "MSAA (domyślnie)"
 
-#. TRANSLATION: dolphin, dolphin_triforce
+#. TRANSLATION: dolphin
 msgctxt "game_options"
 msgid "SSAA"
 msgstr "SSAA"
@@ -6061,7 +6056,12 @@ msgstr "Emuluj wskaźnik Wiimote za pomocą myszy."
 
 #. TRANSLATION: dolphin_triforce
 msgctxt "game_options"
-msgid "UBERSHADERS (needs review)"
+msgid "1.5x 720p (960x792)"
+msgstr ""
+
+#. TRANSLATION: dolphin_triforce
+msgctxt "game_options"
+msgid "2.5x 1080p (1600x1320)"
 msgstr ""
 
 #. TRANSLATION: dolphin_triforce
@@ -6071,17 +6071,27 @@ msgstr ""
 
 #. TRANSLATION: dolphin_triforce
 msgctxt "game_options"
-msgid "DUAL CORE MODE (needs review)"
+msgid "8x (CSAA)"
 msgstr ""
 
 #. TRANSLATION: dolphin_triforce
 msgctxt "game_options"
-msgid "GPU SYNC (needs review)"
+msgid "8xQ (CSAA)"
 msgstr ""
 
 #. TRANSLATION: dolphin_triforce
 msgctxt "game_options"
-msgid "RUMBLE (needs review)"
+msgid "16x (CSAA)"
+msgstr ""
+
+#. TRANSLATION: dolphin_triforce
+msgctxt "game_options"
+msgid "16xQ (CSAA)"
+msgstr ""
+
+#. TRANSLATION: dolphin_triforce
+msgctxt "game_options"
+msgid "4x (SSAA)"
 msgstr ""
 
 #. TRANSLATION: duckstation
@@ -7928,6 +7938,10 @@ msgctxt "game_options"
 msgid ""
 "Read mouse through Rawinput, allowing 2 mice for 2 player shooting games."
 msgstr ""
+
+#~ msgctxt "game_options"
+#~ msgid "CUSTOM TEXTURES"
+#~ msgstr "NIESTANDARDOWE TEKSTURY"
 
 #~ msgctxt "game_options"
 #~ msgid "Game"
