--- a/package/batocera/emulationstation/batocera-es-system/locales/pt_BR/batocera-es-system.po
+++ b/package/batocera/emulationstation/batocera-es-system/locales/pt_BR/batocera-es-system.po
@@ -680,7 +680,7 @@ msgctxt "game_options"
 msgid "YUV v3 (Firebrand)"
 msgstr ""
 
-#. TRANSLATION: libretro/mesen, dolphin, dolphin_triforce, duckstation, mupen64plus
+#. TRANSLATION: libretro/mesen, citra, dolphin, dolphin_triforce, duckstation, ...
 msgctxt "game_options"
 msgid "LOAD CUSTOM TEXTURES"
 msgstr "CARREGAR TEXTURAS PERSONALIZADAS"
@@ -4918,7 +4918,7 @@ msgctxt "game_options"
 msgid "160fps"
 msgstr "160fps"
 
-#. TRANSLATION: libretro/tyrquake, cemu, dolphin, duckstation, supermodel
+#. TRANSLATION: libretro/tyrquake, cemu, dolphin, dolphin_triforce, duckstation, ...
 msgctxt "game_options"
 msgid "RUMBLE"
 msgstr "VIBRAÇÃO"
@@ -5725,11 +5725,6 @@ msgstr "Reduz a gagueira que acontece ao compilar sombreamento."
 
 #. TRANSLATION: citra
 msgctxt "game_options"
-msgid "CUSTOM TEXTURES"
-msgstr "TEXTURAS PERSONALIZADAS"
-
-#. TRANSLATION: citra
-msgctxt "game_options"
 msgid "Preloading is impossible from ES."
 msgstr "O pré-carregamento é impossível a partir do ES."
 
@@ -5874,12 +5869,12 @@ msgctxt "game_options"
 msgid "1x native (640x528)"
 msgstr "1x nativo (640x528)"
 
-#. TRANSLATION: dolphin, dolphin_triforce
+#. TRANSLATION: dolphin
 msgctxt "game_options"
 msgid "6x 4K (3840x3168)"
 msgstr "6x 4K (3840x3168)"
 
-#. TRANSLATION: dolphin, dolphin_triforce
+#. TRANSLATION: dolphin
 msgctxt "game_options"
 msgid "8x 5K (5120x4224)"
 msgstr "8x 5K (5120x4224)"
@@ -5910,7 +5905,7 @@ msgctxt "game_options"
 msgid "UBERSHADERS"
 msgstr "SOMBREAMENTO PRÉ-PROCESSADO"
 
-#. TRANSLATION: dolphin, dolphin_triforce
+#. TRANSLATION: dolphin
 msgctxt "game_options"
 msgid ""
 "May not work well on all hardware. Hybrid is preferred, where supported."
@@ -5918,32 +5913,32 @@ msgstr ""
 "Pode não funcionar bem em todos os hardwares. Híbrido é preferível, quando "
 "suportado."
 
-#. TRANSLATION: dolphin, dolphin_triforce
+#. TRANSLATION: dolphin
 msgctxt "game_options"
 msgid "No Ubershaders"
 msgstr "Sem Sombreamento Pré-Processado"
 
-#. TRANSLATION: dolphin, dolphin_triforce
+#. TRANSLATION: dolphin
 msgctxt "game_options"
 msgid "Exclusive Ubershaders"
 msgstr "Sombreamento Pré-Processado Exclusivo"
 
-#. TRANSLATION: dolphin, dolphin_triforce
+#. TRANSLATION: dolphin
 msgctxt "game_options"
 msgid "Hybrid Ubershaders"
 msgstr "Sombreamento Pré-Processado Híbrido"
 
-#. TRANSLATION: dolphin, dolphin_triforce
+#. TRANSLATION: dolphin
 msgctxt "game_options"
 msgid "Skip Drawing"
 msgstr "Pular renderização de desenho"
 
-#. TRANSLATION: dolphin, dolphin_triforce
+#. TRANSLATION: dolphin
 msgctxt "game_options"
 msgid "PRE-CACHE SHADERS"
 msgstr "PRÉ-CACHE DE SOMBREAMENTO"
 
-#. TRANSLATION: dolphin, dolphin_triforce
+#. TRANSLATION: dolphin
 msgctxt "game_options"
 msgid ""
 "Compile shaders on next launch of game (one time). Reduces micro-freezes."
@@ -5951,7 +5946,7 @@ msgstr ""
 "Compila os sombreamentos na próxima inicialização do jogo (uma vez). Reduz "
 "micro-congelamentos."
 
-#. TRANSLATION: dolphin, dolphin_triforce
+#. TRANSLATION: dolphin
 msgctxt "game_options"
 msgid "Off (default)"
 msgstr "Desligado (padrão)"
@@ -5981,7 +5976,7 @@ msgctxt "game_options"
 msgid "Improves clarity of distant textures."
 msgstr "Melhora a clareza de texturas distantes."
 
-#. TRANSLATION: dolphin
+#. TRANSLATION: dolphin, dolphin_triforce
 msgctxt "game_options"
 msgid "DUAL CORE MODE"
 msgstr "MODO DOIS NÚCLEOS"
@@ -5991,7 +5986,7 @@ msgctxt "game_options"
 msgid "Usually not much faster than single core mode."
 msgstr "Geralmente não muito mais rápido que o modo single core."
 
-#. TRANSLATION: dolphin
+#. TRANSLATION: dolphin, dolphin_triforce
 msgctxt "game_options"
 msgid "GPU SYNC"
 msgstr "SINCRONIZAÇÃO DA PLACA GRÁFICA"
@@ -6008,22 +6003,22 @@ msgctxt "game_options"
 msgid "ANTI-ALIASING"
 msgstr "ANTI SERRILHADO"
 
-#. TRANSLATION: dolphin, dolphin_triforce
+#. TRANSLATION: dolphin
 msgctxt "game_options"
 msgid "ANTI-ALIASING MODE"
 msgstr "MODO DE ANTI SERRILHADO"
 
-#. TRANSLATION: dolphin, dolphin_triforce
+#. TRANSLATION: dolphin
 msgctxt "game_options"
 msgid "Toggle MSAA/SSAA. Depends on anti-aliasing being enabled."
 msgstr "Alternar MSAA/SSAA. Depende da ativação do anti serrilhado."
 
-#. TRANSLATION: dolphin, dolphin_triforce
+#. TRANSLATION: dolphin
 msgctxt "game_options"
 msgid "MSAA (default)"
 msgstr "MSAA (padrão)"
 
-#. TRANSLATION: dolphin, dolphin_triforce
+#. TRANSLATION: dolphin
 msgctxt "game_options"
 msgid "SSAA"
 msgstr "SSAA"
@@ -6082,7 +6077,12 @@ msgstr "Emular o ponteiro do Wiimote com um mouse."
 
 #. TRANSLATION: dolphin_triforce
 msgctxt "game_options"
-msgid "UBERSHADERS (needs review)"
+msgid "1.5x 720p (960x792)"
+msgstr ""
+
+#. TRANSLATION: dolphin_triforce
+msgctxt "game_options"
+msgid "2.5x 1080p (1600x1320)"
 msgstr ""
 
 #. TRANSLATION: dolphin_triforce
@@ -6092,17 +6092,27 @@ msgstr ""
 
 #. TRANSLATION: dolphin_triforce
 msgctxt "game_options"
-msgid "DUAL CORE MODE (needs review)"
+msgid "8x (CSAA)"
 msgstr ""
 
 #. TRANSLATION: dolphin_triforce
 msgctxt "game_options"
-msgid "GPU SYNC (needs review)"
+msgid "8xQ (CSAA)"
 msgstr ""
 
 #. TRANSLATION: dolphin_triforce
 msgctxt "game_options"
-msgid "RUMBLE (needs review)"
+msgid "16x (CSAA)"
+msgstr ""
+
+#. TRANSLATION: dolphin_triforce
+msgctxt "game_options"
+msgid "16xQ (CSAA)"
+msgstr ""
+
+#. TRANSLATION: dolphin_triforce
+msgctxt "game_options"
+msgid "4x (SSAA)"
 msgstr ""
 
 #. TRANSLATION: duckstation
@@ -7981,6 +7991,10 @@ msgid ""
 msgstr ""
 "Lê o mouse através da entrada bruta, permitindo 2 mouses para jogos de tiro "
 "com 2 jogadores."
+
+#~ msgctxt "game_options"
+#~ msgid "CUSTOM TEXTURES"
+#~ msgstr "TEXTURAS PERSONALIZADAS"
 
 #~ msgctxt "game_options"
 #~ msgid ""
